@@ -1,6 +1,7 @@
 package com.northcoders.record_shop_api_v2.service;
 
 import com.northcoders.record_shop_api_v2.dto.AlbumDTO;
+import com.northcoders.record_shop_api_v2.dto.AlbumGetAllResponse;
 import com.northcoders.record_shop_api_v2.dto.ArtistDTO;
 import com.northcoders.record_shop_api_v2.exceptions.AlbumNotFoundException;
 import com.northcoders.record_shop_api_v2.model.Album;
@@ -9,7 +10,11 @@ import com.northcoders.record_shop_api_v2.repository.AlbumRepository;
 import com.northcoders.record_shop_api_v2.repository.ArtistRepository;
 import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -48,9 +53,23 @@ public class AlbumServiceImpl implements AlbumService{
     }
 
     @Override
-    public List<AlbumDTO> getAllAlbums() {
-        List<Album> albums = albumRepository.findAll();
-        return albums.stream().map(this::mapToDTO).collect(Collectors.toList());
+    public AlbumGetAllResponse getAllAlbums(int pageNo, int pageSize) {
+        Pageable pageable = PageRequest.of(pageNo, pageSize);
+        Page<Album> albums = albumRepository.findAll(pageable);
+        List<Album> albumList = albums.getContent();
+        List<AlbumDTO> content = albumList.stream()
+                .map(this::mapToDTO)
+                .toList();
+
+        AlbumGetAllResponse getAllResponse = new AlbumGetAllResponse();
+            getAllResponse.setContent(content);
+            getAllResponse.setPageNo(albums.getNumber());
+            getAllResponse.setPageSize(albums.getSize());
+            getAllResponse.setTotalPages(albums.getTotalPages());
+            getAllResponse.setTotalElements(albums.getTotalElements());
+            getAllResponse.setLast(albums.isLast());
+
+            return getAllResponse;
     }
 
     @Override
